--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <ol>
+    <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
-    </ol>
+    </ul>
+    <!--Lista de descrição abaixo-->
+    <dl>
+        <dt>HTML</dt>
+        <dd>hyper </dd>
+    </dl>
+    <!--o comando abaixo cria uma imagem de progresso,tipo porcentagem-->
+    <progress value="15" max="100"></progress>
 </body>
 </html>
