--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
             <i class="bi bi-hand-thumbs-up"></i>
             <span>Sua avaliação é muito importante!</span>
         </section>
+        <footer>
+            <ul>
+                <li>
+                    <a href=""><i class="bi bi-house"></i><p>Home</p></a>
+                </li>
+                <li>
+                    <a href=""><i class="bi bi-emoji-smile-fill"></i><p>Perfil</p></a>
+                </li>
+                <li>
+                    <a href=""><i class="bi bi-cart4"></i><p>Pedidos</p></a>
+                </li>
+            </ul>
+        </footer>
     </main>
 </body>
 </html>
