--- a/carrinho.html
+++ b/carrinho.html
@@ -25,8 +25,53 @@
      </section>
      <section>
         <div>
-            
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="NOME DO PRODUTO">
+
         </div>
+        <div>
+            <p>Nome do Produto</p>
+            <div>
+                <i class="bi bi-dash-square"></i>
+            <p>1</p>
+            <i class="bi bi-plus-square"></i>
+            </div>
+        </div>
+        <i class="bi bi-trash"></i>
+        <p>R$: 0,00</p>
+        <div>
+
+        </div>
+     </section>
+     <section>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="NOME DO PRODUTO">
+
+        </div>
+        <div>
+            <p>Nome do Produto</p>
+            <div>
+                <i class="bi bi-dash-square"></i>
+            <p>1</p>
+            <i class="bi bi-plus-square"></i>
+            </div>
+        </div>
+        <i class="bi bi-trash"></i>
+        <p>R$: 0,00</p>
+        <div>
+
+        </div>
+     </section>
+     <section>
+        <input type="text" placeholder="Digite o seu cupom">
+        <button>Aplicar Cupom</button>
+     </section>
+     <section>
+        <div>
+        <p>Total</p>
+        <p>Delivery</p>
+        </div>
+        <button>Ir para Pagamento</button>
+        
      </section>
     <footer>
         <ul>
