--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delivery do Lalá</title>
+    <title>Delivery do Lalá e Gih</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     
 </head>
@@ -32,27 +32,28 @@
         </section>
         <section>
             <ul>
-            <li><a href="">Categoria 1</li>
-            <li><a href="">Categoria 2</li>
-            <li><a href="">Categoria 3</li>
+            <li><a href="">PRODUTOS 1</li>
+            <li><a href="">PRODUTOS 2</li>
+            <li><a href="">PRODUTOS 3</li>
             </ul>
         </section>
+        <!--Aqui vai a sessão dos produtos, está colocado as imagens dos hamburgueres-->
         <section>
-            <div>
-             <img src="https://img.freepik.com/fotos-gratis/vista-frontal-delicioso-hamburguer-de-carne-com-batatas-fritas-na-tabua-de-corte-fundo-escuro-refeicao-fast-food-lanche-jantar-sanduiche_140725-156319.jpg" alt="Lanches">
+                        <div>
+             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
              <h3>Hambúrgueres Fitnes</h3>
             </div>
             <div>
-                <img src="https://img.freepik.com/fotos-gratis/vista-frontal-delicioso-hamburguer-de-carne-com-batatas-fritas-na-tabua-de-corte-fundo-escuro-refeicao-fast-food-lanche-jantar-sanduiche_140725-156319.jpg" alt="Lanches">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
                 <h3>Hambúrgueres Fitnes</h3>
                </div>
                <div>
-                <img src="https://img.freepik.com/fotos-gratis/vista-frontal-delicioso-hamburguer-de-carne-com-batatas-fritas-na-tabua-de-corte-fundo-escuro-refeicao-fast-food-lanche-jantar-sanduiche_140725-156319.jpg" alt="Lanches">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
                 <h3>Hambúrgueres Fitnes</h3>
                </div>
 
                <div>
-                <img src="https://img.freepik.com/fotos-gratis/vista-frontal-delicioso-hamburguer-de-carne-com-batatas-fritas-na-tabua-de-corte-fundo-escuro-refeicao-fast-food-lanche-jantar-sanduiche_140725-156319.jpg" alt="Lanches">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
                 <h3>Hambúrgueres Fitnes</h3>
                </div>
               <div>
