--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
         <h1>PRODUTO</h1>
         <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem consectetur esse a nesciunt illo eius quibusdam ipsam consequatur debitis quia!</P>
         <div>
-            <img src="https://conteudo.imguol.com.br/c/entretenimento/49/2020/07/09/pizza-vegana-sem-gluten-1594310825995_v2_450x450.jpg" alt="Aqui é a imagem do produto">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Aqui é a imagem do produto">
         <!--Criando uma div dentro da outra, pra colocar os icones de adicionar + OU - produtos-->
         <div>
             <i class="bi bi-dash-square"></i>
