--- a/carrinho.html
+++ b/carrinho.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery do Lalá e Gih</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,7 @@
         <p>Carrinho</p>
         <i class="bi bi-cart-x"></i>
      </section>
+     
      <section>
         <div>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="NOME DO PRODUTO">
