--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery do Lalá e Gih</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    
+    <link rel="stylesheet" href="/css/style_padrao.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><i class="bi bi-list"></i></li>
+    <header class="cabecalho">
+        <nav class="menu">
+            <ul class="ul-menu">
+                <a href="login.html"><li><i class="bi bi-person-workspace"></i></li></a>
                 <li><i class="bi bi-geo-alt"></i></li>
-                <li><p>Teresina, PI</p></li>
-                <li id="imagem"><img src="logo.png"></li>
+                <li><p class="nome-localizacao">Teresina, PI</p></li>
+                <li><i class="bi bi-award"></i></li>
             </ul>
         </nav>
     </header>
