--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav class="menu">
             <ul class="ul-menu">
                 <a href="login.html"><li><i class="bi bi-person-workspace"></i></li></a>
-                <li><i class="bi bi-geo-alt"></i></li>
-                <li><p class="nome-localizacao">Teresina, PI</p></li>
-                <li><i class="bi bi-award"></i></li>
+                <li id="imagem-localizacao"><i class="bi bi-geo-alt"></i>
+                <p class="nome-localizacao">Teresina, PI</p>
+                <li><img src="/imagens/logo1.png"></li>
             </ul>
         </nav>
     </header>
@@ -73,10 +73,10 @@
                     <a href=""><i class="bi bi-house"></i><p>Home</p></a>
                 </li>
                 <li>
-                    <a href=""><i class="bi bi-emoji-smile-fill"></i><p>Perfil</p></a>
+                    <a href=""><i class="bi bi-emoji-smile-fill"></i><p>Cadastro do Usúario</p></a>
                 </li>
                 <li>
-                    <a href=""><i class="bi bi-cart4"></i><p>Pedidos</p></a>
+                    <a href=""><i class="bi bi-cart4"></i><p>Cadastro de Produtos</p></a>
                 </li>
             </ul>
         </footer>
