--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery do Lalá e Gih</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/style_padrao.css">
+    <link rel="stylesheet" href="css/style_padrao.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -14,47 +14,47 @@
                 <a href="login.html"><li><i class="bi bi-person-workspace"></i></li></a>
                 <li id="imagem-localizacao"><i class="bi bi-geo-alt"></i>
                 <p class="nome-localizacao">Teresina, PI</p>
-                <li><img src="/imagens/logo1.png"></li>
+                <li><img src="imagens/logo1.png"></li>
             </ul>
         </nav>
     </header>
     <!--Agora é o conteudo principal-->
     <main>
         <span>
-            <h1>Delivery do Lalá</h1>
+            <h1>Restaurante Lá Ele</h1>
             <h2>Olá, sejá bem vindo</h2>
-            <h3>Vamos fazer o seu pedido. :D</h3>
+            <h3>Faça seu Pedido</h3>
         </span>
         <!--Adicionar busca no site-->
         <section>
             <i class="bi bi-search-heart-fill"></i>
-            <input type="text" placeholder="Digite seu pedido aqui">
+            <input type="text" placeholder="Faça seu pedido aqui">
         </section>
         <section>
             <ul>
-            <li><a href="">PRODUTOS 1</li>
-            <li><a href="">PRODUTOS 2</li>
-            <li><a href="">PRODUTOS 3</li>
+            <li><a href="">Produtos 1</li>
+            <li><a href="">Produtos 2</li>
+            <li><a href="">Produtos 3</li>
             </ul>
         </section>
         <!--Aqui vai a sessão dos produtos, está colocado as imagens dos hamburgueres-->
         <section>
                         <div>
              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
-             <h3>Hambúrgueres Fitnes</h3>
+             <h3>Produtos - 1</h3>
             </div>
             <div>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
-                <h3>Hambúrgueres Fitnes</h3>
+                <h3>Produtos - 2</h3>
                </div>
                <div>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
-                <h3>Hambúrgueres Fitnes</h3>
+                <h3>Produtos - 3</h3>
                </div>
 
                <div>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-VxaWzf_gOmllNZoxLRwoxfT125uwbhhiF_XPljoRfqNll_DCOt2x-ajMS4K7IgfAdP8&usqp=CAU" alt="Lanches">
-                <h3>Hambúrgueres Fitnes</h3>
+                <h3>Produtos - 4</h3>
                </div>
               <div>
                 <a href="">Ver mais +</a>
@@ -64,7 +64,7 @@
         <section>
             <p>Avalie nosso App</p>
             <i class="bi bi-hand-thumbs-up"></i>
-            <i class="bi bi-hand-thumbs-up"></i>
+            <i class="bi bi-hand-thumbs-down"></i>
             <span>Sua avaliação é muito importante!</span>
         </section>
         <footer>
