--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
                     <a href=""><i class="bi bi-house"></i><p>Home</p></a>
                 </li>
                 <li>
-                    <a href=""><i class="bi bi-emoji-smile-fill"></i><p>Cadastro do Usúario</p></a>
+                    <a href=""><i class="bi bi-person-fill-add"></i><p>Cadastro do Usúario</p></a>
                 </li>
                 <li>
-                    <a href=""><i class="bi bi-cart4"></i><p>Cadastro de Produtos</p></a>
+                    <a href=""><i class="bi bi-handbag"></i><p>Cadastro de Produtos</p></a>
+                </li>
+                <a href=""><i class="bi bi-cart4"></i><p>Carrinho</p></a>
                 </li>
             </ul>
         </footer>
